--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
+    "build:android": "ionic build && ionic cap sync && ionic cap open android",
+    "build:ios": "ionic build && ionic cap sync && ionic cap open ios",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -21,12 +23,11 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@capacitor/android": "^1.2.1",
-    "@capacitor/core": "^1.2.1",
+    "@capacitor/core": "1.2.1",
     "@capacitor/ios": "^1.2.1",
     "@ionic-native/chooser": "^5.14.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.13.0",
-    "@ionic-native/file-chooser": "^5.14.0",
     "@ionic-native/file-path": "^5.14.0",
     "@ionic-native/file-transfer": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -34,8 +35,6 @@
     "@ionic/angular": "^4.6.1",
     "cordova-plugin-chooser": "^1.2.5",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-filechooser": "^1.2.0",
     "cordova-plugin-filepath": "^1.5.6",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -51,7 +50,7 @@
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
-    "@capacitor/cli": "^1.2.0",
+    "@capacitor/cli": "1.2.1",
     "@ionic/angular-toolkit": "~1.5.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
