--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic/angular": "^4.6.1",
     "cordova-plugin-chooser": "^1.2.5",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.5.6",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
