--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
     "@capacitor/android": "^1.2.1",
     "@capacitor/core": "1.2.1",
     "@capacitor/ios": "^1.2.1",
+    "@ionic-native/camera-preview": "^5.14.0",
     "@ionic-native/chooser": "^5.14.0",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/file": "^5.13.0",
-    "@ionic-native/file-path": "^5.14.0",
     "@ionic-native/file-transfer": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.6.1",
+    "cordova-plugin-camera-preview": "^0.11.0",
     "cordova-plugin-chooser": "^1.2.5",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-filepath": "^1.5.6",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
