--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/camera-preview": "^5.14.0",
     "@ionic-native/chooser": "^5.14.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.14.0",
     "@ionic-native/file-transfer": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
